@@ -2,7 +2,7 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Charts Plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.charts;singleton:=true
-Bundle-Version: 1.2.7
+Bundle-Version: 1.2.8
 Bundle-Activator: org.netxms.ui.eclipse.charts.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.ui;bundle-version="3.7.0",
