@@ -57,12 +57,9 @@ import org.netxms.ui.eclipse.charts.widgets.internal.DataComparisonElement;
 
 /**
  * BIRT-based data comparison chart
- *
  */
 public class DataComparisonBirtChart extends GenericBirtChart implements DataComparisonChart
 {
-	private static final long serialVersionUID = 1L;
-
 	private static final String CHART_FONT_NAME = "Verdana";
 	private static final int CHART_FONT_SIZE_TITLE = 10;
 	private static final int CHART_FONT_SIZE_LEGEND = 8;
