@@ -1,6 +1,6 @@
 /**
  * NetXMS - open source network management system
- * Copyright (C) 2003-2011 Victor Kirhenshtein
+ * Copyright (C) 2003-2013 Victor Kirhenshtein
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -42,6 +42,12 @@ public class DashboardElementLayout
 
 	@Element(required=false)
 	public int vertcalAlignment = DashboardElement.FILL;
+	
+	@Element(required=false)
+	public boolean grabHorizontalSpace = true;
+
+	@Element(required=false)
+	public boolean grabVerticalSpace = true;
 
 	@Element(required=false)
 	public int widthHint = -1;
